adiciona borda preta grossa à caixa D

--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -23,4 +23,5 @@
 
   .border {
   /* insira aqui uma borda com valor '5px solid black' para aplicá-la ao item D */
+  border: 5px solid black;
   }
