coloca Mario em cima do Goomba

--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -1,27 +1,23 @@
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
-  }
-
-  .width-and-height {
-    height: 50px;
-    width: 50px;
-  }
-
-  .padding {
-  /* insira aqui um padding de 20px na classe abaixo para aplicá-lo aos itens B, C e D */
-  padding:20px;
-  }
-
-  .margin {
-  /* insira aqui uma margem de 30px na classe abaixo para aplicá-la aos itens C e D */
-  margin:30px;
-  }
-
-  .border {
-  /* insira aqui uma borda com valor '5px solid black' para aplicá-la ao item D */
-  border: 5px solid black;
-  }
+.super-mario{
+    position: absolute;
+    z-index:2;
+    left: 100px;
+}
+.goomba{
+    position: absolute;
+    z-index: 1;
+    top:1110px
+}
+.word{
+    position:absolute;
+    z-index:5;
+}
+.baloon{
+    position:absolute;
+    z-index: 4;
+}
+.bowser{
+    position: absolute;
+    z-index:3;
+    left:1000px;
+}
