--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -1,12 +1,3 @@
-h1, p{
-    text-align: center;
-}
-li:hover{
-    background-color: palevioletred;
-}
-li:active{
-    font-family: sans-serif;
-}
-ol, ul{
-    list-style: none;
+div:hover{
+    border: 5px solid seagreen;
 }
