--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -1,3 +1,18 @@
 div:hover{
-    border: 5px solid seagreen;
+    border: 5px solid gray;
+}
+div:nth-of-type(1){
+    color: red;
+}
+div:nth-of-type(2){
+    color: purple;
+}
+div:nth-of-type(3){
+    color: rgb(12, 34, 231);
+}
+div:nth-of-type(4){
+    color: rgb(20, 54, 17);
+}
+div:nth-of-type(5){
+    color: rgb(236, 154, 86);
 }
