deixa a terceira div maior que as demais

--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -9,6 +9,7 @@ div:nth-of-type(2){
 }
 div:nth-of-type(3){
     color: rgb(12, 34, 231);
+    font-size: 2em;
 }
 div:nth-of-type(4){
     color: rgb(20, 54, 17);
