deixa as h3 ímpares em itálico

--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -19,4 +19,8 @@ div:nth-of-type(5){
 }
 h3{
     font-family: sans-serif;
+    text-decoration: underline;
+}
+div:nth-child(2n+1){
+    font-style: oblique;
 }
