--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -1,26 +1,23 @@
-div:hover{
-    border: 5px solid gray;
+/*
+ - Se a numeração do item for PAR, faça a cor de fonte ser verde. Se o número for considerado primo, utilize a propriedade text-transform para deixar o texto maiúsculo. (Dica: combinar classes pode ser útil aqui).
+ - Faça todas as tags Header (h1, h2...) possuírem cor de fonte vermelha e, se alguma delas estiver em itálico, aumente seu tamanho para 40px e acrescente uma borda de 1px preta e sólida.
+ - Faça todas as li's terem 20px de tamanho de fonte e, para todo texto em itálico dentro de alguma li, utilize a propriedade font-weight para deixá-lo negrito.
+ - Na listagem de linguagens de programação, faça com que as 3 primeiras da lista possuam cor de fonte azul e, se alguma possuir "java*" no texto, utilize uma cor de fundo rosa.
+ - (Bônus) Para cada link na lista de aliados da pessoa desenvolvedora, faça com que ao passar o mouse sobre cada um, o texto fique em negrito e assuma a cor de fonte "temática do site"
+  Dica 1: Utilize o seletor :hover para controlar o passar do mouse.
+  Dica 2: Sugestão de cores padrão. StackOverflow (laranja), W3Schools (verde), MDN (preta), DevDocs (amarela), Trybe (verde).
+
+*/
+ol li{
+    background-color: yellow;
 }
-div:nth-of-type(1){
-    color: red;
+ol li:nth-child(even){
+    color: green;
 }
-div:nth-of-type(2){
-    color: purple;
-}
-div:nth-of-type(3){
-    color: rgb(12, 34, 231);
-    font-size: 2em;
-}
-div:nth-of-type(4){
-    color: rgb(20, 54, 17);
-}
-div:nth-of-type(5){
-    color: rgb(236, 154, 86);
-}
-h3{
-    font-family: sans-serif;
-    text-decoration: underline;
-}
-div:nth-child(2n+1){
-    font-style: oblique;
-}
+li:first-child,
+  li:nth-child(2n + 4),
+  li:nth-child(3n + 6),
+  li:nth-child(4n + 8),
+  li:nth-child(5n + 10){
+      text-transform:uppercase;
+  }
