--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -1,6 +1,5 @@
 /*
- - Se a numeração do item for PAR, faça a cor de fonte ser verde. Se o número for considerado primo, utilize a propriedade text-transform para deixar o texto maiúsculo. (Dica: combinar classes pode ser útil aqui).
- - Faça todas as tags Header (h1, h2...) possuírem cor de fonte vermelha e, se alguma delas estiver em itálico, aumente seu tamanho para 40px e acrescente uma borda de 1px preta e sólida.
+- Faça todas as tags Header (h1, h2...) possuírem cor de fonte vermelha e, se alguma delas estiver em itálico, aumente seu tamanho para 40px e acrescente uma borda de 1px preta e sólida.
  - Faça todas as li's terem 20px de tamanho de fonte e, para todo texto em itálico dentro de alguma li, utilize a propriedade font-weight para deixá-lo negrito.
  - Na listagem de linguagens de programação, faça com que as 3 primeiras da lista possuam cor de fonte azul e, se alguma possuir "java*" no texto, utilize uma cor de fundo rosa.
  - (Bônus) Para cada link na lista de aliados da pessoa desenvolvedora, faça com que ao passar o mouse sobre cada um, o texto fique em negrito e assuma a cor de fonte "temática do site"
@@ -10,14 +9,6 @@
 */
 ol li{
     background-color: yellow;
-}
-ol li:nth-child(even){
+}ol li:nth-child(even){
     color: green;
 }
-li:first-child,
-  li:nth-child(2n + 4),
-  li:nth-child(3n + 6),
-  li:nth-child(4n + 8),
-  li:nth-child(5n + 10){
-      text-transform:uppercase;
-  }
