--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -19,3 +19,10 @@ li:first-child,
   li:nth-child(5n + 10){
       text-transform:uppercase;
   }
+  h1, h2, h3{
+      color: red;
+  }
+  h1 em, h2 em, h3 em{
+      font-size: 40px;
+      border: 1px solid black;
+  }
