--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -1,6 +1,5 @@
 /*
-- Faça todas as tags Header (h1, h2...) possuírem cor de fonte vermelha e, se alguma delas estiver em itálico, aumente seu tamanho para 40px e acrescente uma borda de 1px preta e sólida.
- - Faça todas as li's terem 20px de tamanho de fonte e, para todo texto em itálico dentro de alguma li, utilize a propriedade font-weight para deixá-lo negrito.
+- Faça todas as li's terem 20px de tamanho de fonte e, para todo texto em itálico dentro de alguma li, utilize a propriedade font-weight para deixá-lo negrito.
  - Na listagem de linguagens de programação, faça com que as 3 primeiras da lista possuam cor de fonte azul e, se alguma possuir "java*" no texto, utilize uma cor de fundo rosa.
  - (Bônus) Para cada link na lista de aliados da pessoa desenvolvedora, faça com que ao passar o mouse sobre cada um, o texto fique em negrito e assuma a cor de fonte "temática do site"
   Dica 1: Utilize o seletor :hover para controlar o passar do mouse.
@@ -25,4 +24,10 @@ li:first-child,
   h1 em, h2 em, h3 em{
       font-size: 40px;
       border: 1px solid black;
+  }
+  li{
+      font-size: 20px;
+  }
+  li em{
+      font-weight: bold;
   }
