--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -1,6 +1,5 @@
 /*
-- Faça todas as li's terem 20px de tamanho de fonte e, para todo texto em itálico dentro de alguma li, utilize a propriedade font-weight para deixá-lo negrito.
- - Na listagem de linguagens de programação, faça com que as 3 primeiras da lista possuam cor de fonte azul e, se alguma possuir "java*" no texto, utilize uma cor de fundo rosa.
+ Na listagem de linguagens de programação, faça com que as 3 primeiras da lista possuam cor de fonte azul e, se alguma possuir "java*" no texto, utilize uma cor de fundo rosa.
  - (Bônus) Para cada link na lista de aliados da pessoa desenvolvedora, faça com que ao passar o mouse sobre cada um, o texto fique em negrito e assuma a cor de fonte "temática do site"
   Dica 1: Utilize o seletor :hover para controlar o passar do mouse.
   Dica 2: Sugestão de cores padrão. StackOverflow (laranja), W3Schools (verde), MDN (preta), DevDocs (amarela), Trybe (verde).
@@ -30,4 +29,10 @@ li:first-child,
   }
   li em{
       font-weight: bold;
+  }
+  .prog li:nth-child(-n+3){
+      color: blue;
+  }
+  .prog li[value*="java"]{
+      background-color: rgb(187, 39, 162);
   }
