--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -1,6 +1,5 @@
 /*
- Na listagem de linguagens de programação, faça com que as 3 primeiras da lista possuam cor de fonte azul e, se alguma possuir "java*" no texto, utilize uma cor de fundo rosa.
- - (Bônus) Para cada link na lista de aliados da pessoa desenvolvedora, faça com que ao passar o mouse sobre cada um, o texto fique em negrito e assuma a cor de fonte "temática do site"
+- (Bônus) Para cada link na lista de aliados da pessoa desenvolvedora, faça com que ao passar o mouse sobre cada um, o texto fique em negrito e assuma a cor de fonte "temática do site"
   Dica 1: Utilize o seletor :hover para controlar o passar do mouse.
   Dica 2: Sugestão de cores padrão. StackOverflow (laranja), W3Schools (verde), MDN (preta), DevDocs (amarela), Trybe (verde).
 
@@ -35,4 +34,16 @@ li:first-child,
   }
   .prog li[value*="java"]{
       background-color: rgb(187, 39, 162);
+  }
+  .aliados li:hover{
+    font-weight: bold;
+  }
+  .aliados li:nth-child(1):hover{
+      color: orange;
+  }
+  .aliados li:nth-of-type(2):hover, .aliados li:nth-of-type(5):hover{
+      color:green;
+  }
+  .aliados li:nth-child(4):hover{
+      color: yellow;
   }
